<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="311dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_the_rating"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/would_you_give_a_tip_if_so_how_much"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.741" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.761">

            <Button
                android:id="@+id/btn1Euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn1Euro"
                android:text="@string/_1_euro"
                app:layout_constraintBottom_toTopOf="@+id/btn10Euro"
                app:layout_constraintEnd_toStartOf="@+id/btn2Euro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn2Euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn2Euro"
                android:text="@string/_2_euro"
                app:layout_constraintBottom_toTopOf="@+id/btn25Euro"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toEndOf="@+id/btn1Euro"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn5Euro"
                android:text="@string/_5_euro"
                app:layout_constraintBottom_toTopOf="@+id/btnNoTip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn2Euro"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn10Euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn10Euro"
                android:text="@string/_10_euro"
                app:layout_constraintBottom_toTopOf="@+id/etCustomAmount"
                app:layout_constraintEnd_toStartOf="@+id/btn25Euro"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn1Euro" />

            <Button
                android:id="@+id/btn25Euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn25Euro"
                android:text="@string/_25_euro"
                app:layout_constraintBottom_toTopOf="@+id/etCustomAmount"
                app:layout_constraintEnd_toStartOf="@+id/btnNoTip"
                app:layout_constraintStart_toEndOf="@+id/btn10Euro"
                app:layout_constraintTop_toBottomOf="@+id/btn2Euro" />

            <Button
                android:id="@+id/btnNoTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnNoTip"
                android:text="@string/no_tip"
                app:layout_constraintBottom_toTopOf="@+id/enter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn25Euro"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <EditText
                android:id="@+id/etCustomAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_custom_amount"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/enter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn10Euro" />

            <Button
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendCustomAmount"
                android:text="@string/enter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etCustomAmount"
                app:layout_constraintTop_toBottomOf="@+id/btnNoTip" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="169dp"
            android:layout_height="0dp"
            android:layout_marginStart="197dp"
            android:layout_marginLeft="197dp"
            app:layout_constraintBottom_toTopOf="@+id/IvNewDevices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/StateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_state"
                app:layout_constraintBottom_toTopOf="@+id/bondState2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bluetooth State" />

            <TextView
                android:id="@+id/bondState2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecteddevice"
                app:layout_constraintBottom_toTopOf="@+id/discoverablty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StateView" />

            <TextView
                android:id="@+id/discoverablty"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/discove_state"
                app:layout_constraintBottom_toTopOf="@+id/connectionState"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bondState2"
                tools:text="Discover State" />

            <TextView
                android:id="@+id/connectionState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                app:layout_constraintBottom_toTopOf="@+id/bondState"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discoverablty" />

            <TextView
                android:id="@+id/bondState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bondstate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionState" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="enableDisableDiscover"
            android:text="@string/enable_discoverable"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFindUnpairedDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="btnDiscover"
            android:text="@string/search_devices"
            app:layout_constraintBottom_toTopOf="@+id/btnPaired"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <ListView
            android:id="@+id/IvNewDevices"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/btnFindUnpairedDevices"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <Button
            android:id="@+id/btnPaired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:onClick="getPaired"
            android:text="@string/paired_devices"
            app:layout_constraintBottom_toTopOf="@+id/IvNewDevices"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFindUnpairedDevices" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnConnect"
            android:text="@string/connect"
            app:layout_constraintBottom_toTopOf="@+id/btnFindUnpairedDevices"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="bluetoothOnOff"
            android:text="@string/on_off"
            app:layout_constraintBottom_toTopOf="@+id/btnFindUnpairedDevices"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FirstFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.22" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_a_rating_than_press_send"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>